# FullStack_Project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_interview_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  health.py  interviews.py  questions.py  users.py
app/core/: config.py
tests/: test_health.py
