[project]
name = "ai-interview-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  # "sqlalchemy>=2.0",
  # "asyncpg>=0.29",
  # "alembic>=1.13",
  # "redis>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
